--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Luiz Filipe Machado Barni",
+            "name": "Luiz Machado",
             "email": "machado@odahcam.com"
         }
     ],
