--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
             "email": "machado@odahcam.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Odahcam\\Plates\\Extension\\": "src/"
